log/build_2024-05-30_12-05-32/amr_v4_station/stderr.log
  File "/home/colin/amr_v4_station/install/amr_v4_station/lib/python3.10/site-packages/amr_v4_station/station.py", line 172
    logging.log("docking status: " + (str)self.docking + " cart status: " + (str)self.cart_in_place)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

